--- a/release-notes.html
+++ b/release-notes.html
@@ -1,11 +1,22 @@
-<b>Version 1.5</b>
+<b>Version 2.0</b>
+
+Made Compatible with THunderbird 68. FiltaQuilla had to be largely rewritten for Thunderbird 68, with substantial help from <a href="https://github.com/ptomulik" target="_blank">Paweł Tomulik</a>.
+
+Going forward most bugfixes / new features will be exclusively available for Thunderbird 68. The reason for this is that through architectural changes on the Mozilla code platform the code for Thunderbird 60 and earlier is substantially different.
+
 <ul>
-<li>Completed Dutch translation - thanks to Markh van BabelZilla.org</li>
-<li>Completed Swedish translation - thanks to A. Regnander - Phoenix</li>
-<li>Fixed <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/9">issue #9</a> Error in Console - Services.prefs.getStringPref is not a function - affecting older versions of Thunderbird.</li>
-<li>Added debug option for future trouble shooting.</li>
-<li>Added support icons for filter actions and search terms: these open dedicated topics on the support pages.</li>
-<li>Added back inheritpane service module.</li>
-<li>Raised minimum version to Thunderbird 52. It is likely that the next version will be minimum 60, once it starts to support Thunderbird 68 to be future proof for 2020.</li>
+<li> Check the new <a href="https://github.com/RealRaven2000/FiltaQuilla/issues">Issue Tracker</a> for open problems and to add feature requests.</li>
+<li> Added links to the quickFilters page for supporting the development team. </li>
 </ul>
+
+<strong>Support My Work</strong>
+
+As I am often asked about added features for filter conditions and actions for my Add-on <a href="https://addons.thunderbird.net/addon/quickfilters/">quickFilters</a> this is a good location for extending Filter behavior. 
+
+If you want to <b>support the FiltaQuilla project</b>, please install quickFilters and 
+<strong>purchase a <a href="http://quickfilters.mozdev.org/premium.html">quickFilters Pro</a> license.</strong>
+
+I am keeping the license for FiltaQuilla as GPL 3.0, free to download and use.
+
+
 
