--- a/release-notes.html
+++ b/release-notes.html
@@ -14,7 +14,7 @@ Going forward most bugfixes / new features will be exclusively available for Thu
 As I am often asked about added features for filter conditions and actions for my Add-on <a href="https://addons.thunderbird.net/addon/quickfilters/">quickFilters</a> this is a good location for extending Filter behavior. 
 
 If you want to <b>support the FiltaQuilla project</b>, please install quickFilters and 
-<strong>purchase a <a href="http://quickfilters.mozdev.org/premium.html">quickFilters Pro</a> license.</strong>
+<strong>purchase a <a href="https://quickfilters.quickfolders.org/premium.html">quickFilters Pro</a> license.</strong>
 
 I am keeping the license for FiltaQuilla as GPL 3.0, free to download and use.
 
