Fixed address book selector in filter editor and options version label layout

--- a/content/options.xhtml
+++ b/content/options.xhtml
@@ -45,7 +45,8 @@
   <script type="application/javascript" src="chrome://filtaquilla/content/options.js"/>
   <script type="application/javascript" src="chrome://filtaquilla/content/filtaquilla-util.js"/>
 
-  <hbox class="title">FiltaQuilla -<spacer flex="5" />
+  <hbox class="title">FiltaQuilla
+    <spacer flex="5" />
     <label id="fq-options-header-version" tooltiptext="click for change log!" onclick="onVersionClick();"> </label>
   </hbox>
   <prefpane id="pane1" label="&pane1.title;">
