--- a/release-notes.html
+++ b/release-notes.html
@@ -1,12 +1,11 @@
-<b>Version 2.0</b>
-
-Made Compatible with THunderbird 68. FiltaQuilla had to be largely rewritten for Thunderbird 68, with substantial help from <a href="https://github.com/ptomulik" target="_blank">Paweł Tomulik</a>.
+<b>Version 2.1</b>
 
 Going forward most bugfixes / new features will be exclusively available for Thunderbird 68. The reason for this is that through architectural changes on the Mozilla code platform the code for Thunderbird 60 and earlier is substantially different.
 
 <ul>
-<li> Check the new <a href="https://github.com/RealRaven2000/FiltaQuilla/issues">Issue Tracker</a> for open problems and to add feature requests.</li>
-<li> Added links to the quickFilters page for supporting the development team. </li>
+<li> Currently working on a version for Thunderbird 78  - you can already <a href="https://github.com/RealRaven2000/FiltaQuilla/releases/">get prereleases on my github</a>. Complete conversion is discussed at <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/64">[issue 64]</a></li>
+<li> Added Icons and fixed look on Address book picker in Filter Editor</li>
+<li> Corrected a string in german lkocale from "Nicht ändern" to "Nicht benachrichtigen"</li>
 </ul>
 
 <strong>Support My Work</strong>
