--- a/content/options.xhtml
+++ b/content/options.xhtml
@@ -415,10 +415,10 @@
 				  <vbox class="linkBox">
 						<hbox>
 							<spacer flex="1" />
-							<a href="https://quickfilters.quickfolders.org/donate.html"
+							<a href="https://quickfilters.quickfolders.org/filtaquilla.html#donate"
 								 id="licenseLink"
 								 class="buttonLink"
-								 onclick="FiltaQuilla.Util.openLinkInTab('https://quickfilters.quickfolders.org/donate.html');window.close();">
+								 onclick="FiltaQuilla.Util.openLinkInTab('https://quickfilters.quickfolders.org/filtaquilla.html#donate');window.close();">
                  &supportFiltaquilla;
 							</a>
 							<spacer flex="1" />
