--- a/release-notes.html
+++ b/release-notes.html
@@ -1,16 +1,19 @@
 <b>Version 3.0</b>
 
-Made Compatible with THunderbird 68. Again, FiltaQuilla had to be largely rewritten for Thunderbird 78, because support for some key technologies was deprecated by Mozilla (bindings was central to making the filter editor work, so there was numerous days of work and guessing necessary to get it back on track.</a>.
+FiltaQuilla is now compatible with Thunderbird 78. Again, FiltaQuilla had to be largely rewritten for Thunderbird 78, because support for some key technologies was deprecated by Mozilla (bindings was central to making the filter editor work, so there was numerous days of work and guessing necessary to get it back on track. Many thanks to John Bieling from Thunderbird for helping especially with the very problematic Filter Editor.
 
 Going forward most bugfixes / new features will be exclusively available for Thunderbird 78 - but there may be some minor backports for Thunderbird 68. The reason for this is that through architectural changes on the Mozilla code platform the code for Thunderbird 68 and earlier is substantially different.
 
+If you would like to support FiltaQuilla with donation you can now <a href="https://quickfilters.quickfolders.org/filtaquilla.html#donate">do so here</a>
+
 <ul>
 <li> Check the new <a href="https://github.com/RealRaven2000/FiltaQuilla/issues">Issue Tracker</a> for open problems and to add feature requests.</li>
-<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/14">[issue 14]</a> Make quickFilters compatible with Thunderbird 78 ESR. The gruelling detail on all the necessary work can be read there.</li>
+<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/64">[issue 64]</a> Make FiltaQuilla compatible with Thunderbird 78 ESR. The gruelling detail on all the necessary work can be read there.</li>
 <li> All bindings were replaced with pure JavaScript. This affected editing <i>all</i> conditions that FiltaQuilla adds to the Filter Editor.</li>
 <li> Printing didn't work anymore </p>
 <li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/45">[issue 45]</a> Fixed "Move later" / "Copy as Read" For Thunderbird versions > 64 </li>
-
+<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/76">[issue 76]</a> Fixed detach attachments - if the attachment was already removed then no empty file is generated, but a message is shown in error console showinbg the "last seen location" where the attachment was originally detached to. </li>
+<li> Fixed behavior of opening FiltaQuilla page jumping to in-page links when a tab with the same basic URL is already shown</li>
 </ul>
 
 <strong>Support My Work</strong>
@@ -19,6 +22,8 @@ As I am often asked about added features for filter conditions and actions for m
 
 If you want to <b>support the FiltaQuilla project</b>, please install quickFilters and 
 <strong>purchase a <a href="https://quickfilters.quickfolders.org/premium.html">quickFilters Pro</a> license.</strong>
+
+You can now also <href="https://quickfilters.quickfolders.org/filtaquilla.html#donate">donate directly here</a>.
 
 I am keeping the license for FiltaQuilla as GPL 3.0, free to download and use.
 
