--- a/release-notes.html
+++ b/release-notes.html
@@ -1,16 +1,18 @@
-<b>Version 2.1</b>
+<b>Version 2.1.1</b>
 
-Going forward most bugfixes / new features will be exclusively available for Thunderbird 68. The reason for this is that through architectural changes on the Mozilla code platform the code for Thunderbird 60 and earlier is substantially different.
+Going forward most bugfixes / new features will be exclusively available for Thunderbird 78 - some changes may be backported to Thunderbird 68. The reason for this is that through architectural changes on the Mozilla code platform the code for Thunderbird 60 and earlier is substantially different.
 
 <ul>
 <li> Currently working on a version for Thunderbird 78  - you can already <a href="https://github.com/RealRaven2000/FiltaQuilla/releases/">get prereleases on my github</a>. Complete conversion is discussed at <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/64">[issue 64]</a></li>
+<li>2.1.1 added strict_max_version to avoid this Add-on being installed in Tb78 - where it would be incompatible</li>
 <li> Added Icons and fixed look on Address book picker in Filter Editor</li>
-<li> Corrected a string in german lkocale from "Nicht ändern" to "Nicht benachrichtigen"</li>
+<li> Corrected a string in german locale from "Nicht ändern" to "Nicht benachrichtigen"</li>
+<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/67">[issue 67]</a> Help links in options dialog were misdirected to the wrong page</li>
 </ul>
 
 <strong>Support My Work</strong>
 
-As I am often asked about added features for filter conditions and actions for my Add-on <a href="https://addons.thunderbird.net/addon/quickfilters/">quickFilters</a> this is a good location for extending Filter behavior. 
+As I am often asked about added features for filter conditions and actions for my Add-on <a href="https://addons.thunderbird.net/addon/quickfilters/">quickFilters</a>. FiltaQuilla is a good location for extending Filter behavior. 
 
 If you want to <b>support the FiltaQuilla project</b>, please install quickFilters and 
 <strong>purchase a <a href="http://quickfilters.mozdev.org/premium.html">quickFilters Pro</a> license.</strong>
