--- a/release-notes.html
+++ b/release-notes.html
@@ -3,7 +3,7 @@
 Going forward most bugfixes / new features will be exclusively available for Thunderbird 78 - some changes may be backported to Thunderbird 68. The reason for this is that through architectural changes on the Mozilla code platform the code for Thunderbird 60 and earlier is substantially different.
 
 <ul>
-<li> Currently working on a version for Thunderbird 78  - you can already <a href="https://github.com/RealRaven2000/FiltaQuilla/releases/">get prereleases on my github</a>. Complete conversion is discussed at <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/64">[issue 64]</a></li>
+<li> Currently working on a version for Thunderbird 78  - you can already <a href="https://github.com/RealRaven2000/FiltaQuilla/releases/">get prereleases on my github</a>. The detailed conversion process is discussed at <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/64">[issue 64]</a></li>
 <li> 2.1.2 fixed a problem in manifest file (stric_max_verseion) that wouldn't allow it to update existing versions.</li>
 <li> 2.1.1 added strict_max_version to avoid this Add-on being installed in Tb78 - where it would be incompatible</li>
 <li> Added Icons and fixed look on Address book picker in Filter Editor</li>
@@ -17,6 +17,8 @@ As I am often asked about added features for filter conditions and actions for m
 
 If you want to <b>support the FiltaQuilla project</b>, please install quickFilters and 
 <strong>purchase a <a href="http://quickfilters.mozdev.org/premium.html">quickFilters Pro</a> license.</strong>
+
+You can now also <a href="https://quickfilters.quickfolders.org/filtaquilla.html#donate">donate directly here</a>.
 
 I am keeping the license for FiltaQuilla as GPL 3.0, free to download and use.
 
