--- a/release-notes.html
+++ b/release-notes.html
@@ -12,7 +12,7 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 <li> All bindings were replaced with pure JavaScript. This affected editing <i>all</i> conditions that FiltaQuilla adds to the Filter Editor.</li>
 <li> Printing didn't work anymore </p>
 <li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/45">[issue 45]</a> Fixed "Move later" / "Copy as Read" For Thunderbird versions > 64 </li>
-<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/76">[issue 76]</a> Fixed detach attachments - if the attachment was already removed then no empty file is generated, but a message is shown in error console showinbg the "last seen location" where the attachment was originally detached to. </li>
+<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/76">[issue 76]</a> Fixed detach attachments - if the attachment was already removed then no empty file is generated, but a message is shown in error console showing the "last seen location" where the attachment was originally detached to. </li>
 <li> Fixed behavior of opening FiltaQuilla page jumping to in-page links when a tab with the same basic URL is already shown</li>
 <li> 3.0.1 - version bump because I had to rerelease 2.1.2 fixing a syntax error in manifest.json </li>
 </ul>
