--- a/release-notes.html
+++ b/release-notes.html
@@ -1,4 +1,4 @@
-<b>Version 3.0.2</b>
+<b>Version 3.0.3</b>
 
 FiltaQuilla is now compatible with Thunderbird 78. Again, FiltaQuilla had to be largely rewritten for Thunderbird 78, because support for some key technologies was deprecated by Mozilla (bindings was central to making the filter editor work, so there was numerous days of work and guessing necessary to get it back on track. Many thanks to John Bieling from Thunderbird for helping especially with the very problematic Filter Editor.
 
@@ -15,6 +15,7 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 <li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/76">[issue 76]</a> Fixed detach attachments - if the attachment was already removed then no empty file is generated, but a message is shown in error console showing the "last seen location" where the attachment was originally detached to. </li>
 <li> Fixed behavior of opening FiltaQuilla page jumping to in-page links when a tab with the same basic URL is already shown</li>
 <li> 3.0.1 - version bump because I had to rerelease 2.1.2 fixing a syntax error in manifest.json </li>
+<li> 3.0.3 - fixed firstRun code so that support site is loaded on install / update</li>
 </ul>
 
 <strong>Support My Work</strong>
