--- a/content/options.xhtml
+++ b/content/options.xhtml
@@ -70,6 +70,8 @@
       <preference id="detachAttachmentsEnabled" name="extensions.filtaquilla.detachAttachments.enabled" type="bool"/>
       <preference id="javascriptActionEnabled" name="extensions.filtaquilla.javascriptAction.enabled" type="bool"/>
       <preference id="javascriptActionBodyEnabled" name="extensions.filtaquilla.javascriptActionBody.enabled" type="bool"/>
+      <preference id="tonequillaEnabled" name="extensions.filtaquilla.tonequilla.enabled" type="bool"/>
+
       <preference id="saveMessageAsFileEnabled" name="extensions.filtaquilla.saveMessageAsFile.enabled" type="bool"/>
       <preference id="moveLaterEnabled" name="extensions.filtaquilla.moveLater.enabled" type="bool"/>
       <preference id="SubjectRegexEnabled" name="extensions.filtaquilla.SubjectRegexEnabled" type="bool"/>
@@ -246,6 +248,10 @@
 								</span>
               </row>
               <row>
+                <checkbox id="checkTonequillaEnabled" 
+                          preference="tonequillaEnabled"
+                          label="&checkTonequillaEnabled.label;"/>
+              
               <!-- dummy row because I have complaints about size ? -->
                 <spacer height="20px" />
               </row>
