--- a/release-notes.html
+++ b/release-notes.html
@@ -1,4 +1,4 @@
-<b>Version 3.0.3</b>
+<b>Version 3.1</b>
 
 FiltaQuilla is now compatible with Thunderbird 78. Again, FiltaQuilla had to be largely rewritten for Thunderbird 78, because support for some key technologies was deprecated by Mozilla (bindings was central to making the filter editor work, so there was numerous days of work and guessing necessary to get it back on track. Many thanks to John Bieling from Thunderbird for helping especially with the very problematic Filter Editor.
 
@@ -8,14 +8,11 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 
 <ul>
 <li> Check the new <a href="https://github.com/RealRaven2000/FiltaQuilla/issues">Issue Tracker</a> for open problems and to add feature requests.</li>
-<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/64">[issue 64]</a> Make FiltaQuilla compatible with Thunderbird 78 ESR. The gruelling detail on all the necessary work can be read there.</li>
-<li> All bindings were replaced with pure JavaScript. This affected editing <i>all</i> conditions that FiltaQuilla adds to the Filter Editor.</li>
-<li> Printing didn't work anymore </p>
-<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/45">[issue 45]</a> Fixed "Move later" / "Copy as Read" For Thunderbird versions > 64 </li>
-<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/76">[issue 76]</a> Fixed detach attachments - if the attachment was already removed then no empty file is generated, but a message is shown in error console showing the "last seen location" where the attachment was originally detached to. </li>
-<li> Fixed behavior of opening FiltaQuilla page jumping to in-page links when a tab with the same basic URL is already shown</li>
-<li> 3.0.1 - version bump because I had to rerelease 2.1.2 fixing a syntax error in manifest.json </li>
-<li> 3.0.3 - fixed firstRun code so that support site is loaded on install / update</li>
+<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/94">[issue 94]</a> Feature Request: Add ToneQuilla functionality to FiltaQuilla.</li>
+<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/95">[issue 95]</a> Support instant apply for changes in Options Window.</li>
+<li> Completed strings in Swedish locale </li>
+<li> Fixed a problem with the German translation for "do not notify"</li>
+<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/97">[issue 97]</a> Printing in background should not enable global setting 'print.always_print_silent' permanently.</li>
 </ul>
 
 <strong>Support My Work</strong>
