--- a/release-notes.html
+++ b/release-notes.html
@@ -8,7 +8,10 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 
 <ul>
 <li> Check the new <a href="https://github.com/RealRaven2000/FiltaQuilla/issues">Issue Tracker</a> for open problems and to add feature requests.</li>
-<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/94">[issue 94]</a> Feature Request: Add ToneQuilla functionality to FiltaQuilla.</li>
+<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/94">[issue 94]</a> Feature Request: Add ToneQuilla functionality to FiltaQuilla. Removed some of the larger sounds and added the following sounds from <a href="https://notificationsounds.com/">notificationsounds.com</a> (CC license):
+maybe-one-day-584, hold-your-horses-468, scratch-389, your-turn-491, knob-458, worthwhile-438, scissors-423.
+The default location which the provided sounds are unpacked into is in profile/extensions/filtaquilla. You can either add your own sounds there for convenience or point to sounds in other locations.
+</li>
 <li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/95">[issue 95]</a> Support instant apply for changes in Options Window.</li>
 <li> Completed strings in Swedish locale </li>
 <li> Fixed a problem with the German translation for "do not notify"</li>
