fix version diffs

--- a/release-notes.html
+++ b/release-notes.html
@@ -1,4 +1,4 @@
-<b>Version 3.2.1a</b>
+<b>Version 3.2pre5</b>
 <ul>
 <li>added option to set regexp for case insensitive match by default 
 <li>added body regexp match (not completed yet)
