--- a/release-notes.html
+++ b/release-notes.html
@@ -4,7 +4,7 @@
 <li>added body regexp match (not completed yet)
 </ul>
 
-<b>Version 3.1</b>
+<b>Version 3.2</b>
 
 FiltaQuilla is now compatible with Thunderbird 78. Again, FiltaQuilla had to be largely rewritten for Thunderbird 78, because support for some key technologies was deprecated by Mozilla (bindings was central to making the filter editor work, so there was numerous days of work and guessing necessary to get it back on track. Many thanks to John Bieling from Thunderbird for helping especially with the very problematic Filter Editor.
 
@@ -14,14 +14,7 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 
 <ul>
 <li> Check the new <a href="https://github.com/RealRaven2000/FiltaQuilla/issues">Issue Tracker</a> for open problems and to add feature requests.</li>
-<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/94">[issue 94]</a> Feature Request: Add ToneQuilla functionality to FiltaQuilla. Removed some of the larger sounds and added the following sounds from <a href="https://notificationsounds.com/">notificationsounds.com</a> (CC license):
-maybe-one-day-584, hold-your-horses-468, scratch-389, your-turn-491, knob-458, worthwhile-438, scissors-423.
-The default location which the provided sounds are unpacked into is in profile/extensions/filtaquilla. You can either add your own sounds there for convenience or point to sounds in other locations.
-</li>
-<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/95">[issue 95]</a> Support instant apply for changes in Options Window.</li>
-<li> Completed strings in Swedish locale </li>
-<li> Fixed a problem with the German translation for "do not notify"</li>
-<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/97">[issue 97]</a> Printing in background should not enable global setting 'print.always_print_silent' permanently.</li>
+<li> Added Russian locale by ashed @ github </li>
 </ul>
 
 <strong>Support My Work</strong>
