add regex flags: c - case-sensitive search, a - alert in case of match; extract callback function into reusable object

--- a/content/options.xhtml
+++ b/content/options.xhtml
@@ -67,8 +67,6 @@
       <preference id="printEnabled" name="extensions.filtaquilla.print.enabled" type="bool"/>
       <preference id="addSenderEnabled" name="extensions.filtaquilla.addSender.enabled" type="bool"/>
       <preference id="saveAttachmentEnabled" name="extensions.filtaquilla.saveAttachment.enabled" type="bool"/>
-      <preference id="AttachmentRegexEnabled" name="extensions.filtaquilla.AttachmentRegexEnabled" type="bool"/>
-      <preference id="BodyRegexEnabled" name="extensions.filtaquilla.BodyRegexEnabled" type="bool"/>
       <preference id="detachAttachmentsEnabled" name="extensions.filtaquilla.detachAttachments.enabled" type="bool"/>
       <preference id="javascriptActionEnabled" name="extensions.filtaquilla.javascriptAction.enabled" type="bool"/>
       <preference id="javascriptActionBodyEnabled" name="extensions.filtaquilla.javascriptActionBody.enabled" type="bool"/>
@@ -78,6 +76,9 @@
       <preference id="moveLaterEnabled" name="extensions.filtaquilla.moveLater.enabled" type="bool"/>
       <preference id="SubjectRegexEnabled" name="extensions.filtaquilla.SubjectRegexEnabled" type="bool"/>
       <preference id="HeaderRegexEnabled" name="extensions.filtaquilla.HeaderRegexEnabled" type="bool"/>
+      <preference id="AttachmentRegexEnabled" name="extensions.filtaquilla.AttachmentRegexEnabled" type="bool"/>
+      <preference id="BodyRegexEnabled" name="extensions.filtaquilla.BodyRegexEnabled" type="bool"/>
+      <preference id="SubjectBodyRegexEnabled" name="extensions.filtaquilla.SubjectBodyRegexEnabled" type="bool"/>
       <preference id="JavascriptEnabled" name="extensions.filtaquilla.JavascriptEnabled" type="bool"/>
       <preference id="SearchBccEnabled" name="extensions.filtaquilla.SearchBccEnabled" type="bool"/>
       <preference id="FolderNameEnabled" name="extensions.filtaquilla.FolderNameEnabled" type="bool"/>
@@ -340,14 +341,15 @@
                         label="&checkRegexpCaseInsensitiveEnabled.label;"/>
              
             </span>
-               <span>
-              <checkbox id="checkBodyRegexEnabled" preference="BodyRegexEnabled"
-                        label="&checkBodyRegexEnabled.label;"
-                        accesskey="&checkBodyRegexEnabled.accesskey;"/>
-              <toolbarbutton
-                class="helpLink"
-                onclick="FiltaQuilla.Util.openHelpTab('body_regex');"
-                />
+            <span>
+              <checkbox id="checkBodyRegexEnabled" preference="BodyRegexEnabled" label="&checkBodyRegexEnabled.label;"
+                accesskey="&checkBodyRegexEnabled.accesskey;" />
+              <toolbarbutton class="helpLink" onclick="FiltaQuilla.Util.openHelpTab('body_regex');" />
+            </span>
+            <span>
+              <checkbox id="checkSubjectBodyRegexEnabled" preference="SubjectBodyRegexEnabled" label="&checkSubjectBodyRegexEnabled.label;"
+                accesskey="&checkSubjectBodyRegexEnabled.accesskey;" />
+              <toolbarbutton class="helpLink" onclick="FiltaQuilla.Util.openHelpTab('subjectbody_regex');" />
             </span>
 
 
