--- a/release-notes.html
+++ b/release-notes.html
@@ -1,9 +1,3 @@
-<b>Version 3.2pre5</b>
-<ul>
-<li>added option to set regexp for case insensitive match by default 
-<li>added body regexp match (not completed yet)
-</ul>
-
 <b>Version 3.2</b>
 
 FiltaQuilla is now compatible with Thunderbird 78. Again, FiltaQuilla had to be largely rewritten for Thunderbird 78, because support for some key technologies was deprecated by Mozilla (bindings was central to making the filter editor work, so there was numerous days of work and guessing necessary to get it back on track. Many thanks to John Bieling from Thunderbird for helping especially with the very problematic Filter Editor.
@@ -13,6 +7,9 @@ Going forward most bugfixes / new features will be exclusively available for Thu
 If you would like to support FiltaQuilla with donation you can now <a href="https://quickfilters.quickfolders.org/filtaquilla.html#donate">do so here</a>
 
 <ul>
+<li> added option to set regexp for case insensitive match by default </li>
+<li> added body regexp match (WIP) </li>
+<li> options now accessible via wrench symbol in Add-ons Manager </li>
 <li> Check the new <a href="https://github.com/RealRaven2000/FiltaQuilla/issues">Issue Tracker</a> for open problems and to add feature requests.</li>
 <li> Added Russian locale by ashed @ github </li>
 </ul>
