Fixed problem with missing accelerator string

--- a/content/options.xhtml
+++ b/content/options.xhtml
@@ -342,8 +342,7 @@
             </span>
                <span>
               <checkbox id="checkBodyRegexEnabled" preference="BodyRegexEnabled"
-                        label="&checkBodyRegexEnabled.label;"
-                        accesskey="&checkBodyRegexEnabled.accesskey;"/>
+                        label="&checkBodyRegexEnabled.label;"/>
               <toolbarbutton
                 class="helpLink"
                 onclick="FiltaQuilla.Util.openHelpTab('body_regex');"
