Added a (yet ugly) divider for the case insensitive option

--- a/content/options.xhtml
+++ b/content/options.xhtml
@@ -335,13 +335,9 @@
                   tooltiptext="&helpFeatureTip;"
                   />
             </span>
-               <span>
-              <checkbox id="checkRegexpCaseInsensitiveEnabled" preference="regexpCaseInsensitiveEnabled"
-                        label="&checkRegexpCaseInsensitiveEnabled.label;"/>
-             
-            </span>
-               <span>
-              <checkbox id="checkBodyRegexEnabled" preference="BodyRegexEnabled"
+            <span>
+              <checkbox id="checkBodyRegexEnabled" 
+                        preference="BodyRegexEnabled"
                         label="&checkBodyRegexEnabled.label;"/>
               <toolbarbutton
                 class="helpLink"
@@ -350,6 +346,12 @@
             </span>
 
 
+          </div>
+          <div height="10px" class="lineSpacer"/>
+          <div>
+            <checkbox id="checkRegexpCaseInsensitiveEnabled" 
+                      preference="regexpCaseInsensitiveEnabled"
+                      label="&checkRegexpCaseInsensitiveEnabled.label;"/>
           </div>
         </tabpanel>
         
