re-implement Custom Actions for Tb91 - WIP

--- a/release-notes.html
+++ b/release-notes.html
@@ -12,6 +12,7 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 <li> options now accessible via wrench symbol in Add-ons Manager </li>
 <li> Check the new <a href="https://github.com/RealRaven2000/FiltaQuilla/issues">Issue Tracker</a> for open problems and to add feature requests.</li>
 <li> Added Russian locale by ashed @ github </li>
+<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/111">[issue 111]</a> Make FiltaQuilla compatible with Thunderbird 91 - WIP</li>
 </ul>
 
 <strong>Support My Work</strong>
