--- a/release-notes.html
+++ b/release-notes.html
@@ -1,8 +1,8 @@
 <b>Version 3.2</b>
 
-FiltaQuilla is now compatible with Thunderbird 78. Again, FiltaQuilla had to be largely rewritten for Thunderbird 78, because support for some key technologies was deprecated by Mozilla (bindings was central to making the filter editor work, so there was numerous days of work and guessing necessary to get it back on track. Many thanks to John Bieling from Thunderbird for helping especially with the very problematic Filter Editor.
+FiltaQuilla is now compatible with Thunderbird 91. FiltaQuilla had to have some necessary changes for Thunderbird 91, for instance the filteraction "match" function has been replace with "matchAction" and changed parameters.
 
-Going forward most bugfixes / new features will be exclusively available for Thunderbird 78 - but there may be some minor backports for Thunderbird 68. The reason for this is that through architectural changes on the Mozilla code platform the code for Thunderbird 68 and earlier is substantially different.
+I will try to keep the latest version on ATN compatible with both Thunderbird 78 and ESR 91 as long as possible.
 
 If you would like to support FiltaQuilla with donation you can now <a href="https://quickfilters.quickfolders.org/filtaquilla.html#donate">do so here</a>
 
