--- a/release-notes.html
+++ b/release-notes.html
@@ -8,7 +8,8 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 
 <ul>
 <li> added option to set regexp for case insensitive match by default </li>
-<li> added body regexp match (WIP) </li>
+<li> added body regexp match (WIP) </li> 
+<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/53">[issue 53]</a> Support saving files with Mime encoded subjects and file names with cyrillic / other characters.</li>
 <li> options now accessible via wrench symbol in Add-ons Manager </li>
 <li> Check the new <a href="https://github.com/RealRaven2000/FiltaQuilla/issues">Issue Tracker</a> for open problems and to add feature requests.</li>
 <li> Added Russian locale by ashed @ github </li>
