restrict body match to "text/" mime types only to improve performance

--- a/release-notes.html
+++ b/release-notes.html
@@ -7,13 +7,13 @@ I will try to keep the latest version on ATN compatible with both Thunderbird 78
 If you would like to support FiltaQuilla with donation you can now <a href="https://quickfilters.quickfolders.org/filtaquilla.html#donate">do so here</a>
 
 <ul>
-<li> added option to set regexp for case insensitive match by default </li>
-<li> added body regexp match (WIP) </li> 
+<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/111">[issue 111]</a> Make FiltaQuilla compatible with Thunderbird 91 - WIP</li>
+<li> Added option to set regexp for case insensitive match by default </li>
+<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/115">[issue 115]</a> Added body regexp match </li> 
 <li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/53">[issue 53]</a> Support saving files with Mime encoded subjects and file names with cyrillic / other characters.</li>
-<li> options now accessible via wrench symbol in Add-ons Manager </li>
+<li> Options are now accessible via wrench symbol in Add-ons Manager </li>
 <li> Check the new <a href="https://github.com/RealRaven2000/FiltaQuilla/issues">Issue Tracker</a> for open problems and to add feature requests.</li>
 <li> Added Russian locale by ashed @ github </li>
-<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/111">[issue 111]</a> Make FiltaQuilla compatible with Thunderbird 91 - WIP</li>
 </ul>
 
 <strong>Support My Work</strong>
