--- a/release-notes.html
+++ b/release-notes.html
@@ -1,4 +1,4 @@
-<b>Version 3.2</b>
+<b>Version 3.3</b>
 
 FiltaQuilla is now compatible with Thunderbird 91. FiltaQuilla had to have some necessary changes for Thunderbird 91, for instance the filteraction "match" function has been replace with "matchAction" and changed parameters.
 
@@ -6,15 +6,21 @@ I will try to keep the latest version on ATN compatible with both Thunderbird 78
 
 If you would like to support FiltaQuilla with donation you can now <a href="https://quickfilters.quickfolders.org/filtaquilla.html#donate">do so here</a>
 
+<b>Bug Fixes</b>
 <ul>
-<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/111">[issue 111]</a> Make FiltaQuilla compatible with Thunderbird 91 - WIP</li>
-<li> Added option to set regexp for case insensitive match by default </li>
-<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/115">[issue 115]</a> Added body regexp match </li> 
-<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/53">[issue 53]</a> Support saving files with Mime encoded subjects and file names with cyrillic / other characters.</li>
-<li> Options are now accessible via wrench symbol in Add-ons Manager </li>
-<li> Check the new <a href="https://github.com/RealRaven2000/FiltaQuilla/issues">Issue Tracker</a> for open problems and to add feature requests.</li>
-<li> Added Russian locale by ashed @ github </li>
+<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/130">[issue 130]</a> 
+Fixed: print automation is not working with Thunderbird Version 91.2.1</li>
+<li><a href="https://github.com/RealRaven2000/quickFilters/issues/142">[issue 142]</a> Fixed: Add sender to list shows no results in the List / Account dropdown.</li>
+<li><a href="https://github.com/RealRaven2000/quickFilters/issues/144">[issue 144]</a>,
+<a href="https://github.com/RealRaven2000/quickFilters/issues/131">[issue 131]</a> 
+Fixed: Save Message as File doesn't work with illegal filename characters in subject as "\", ":", "*", "|" or "?". These are now replaced with "-". Diacritics and special characters are replaced with phonetical equvialents. Case is now preserved, I assume that most file systems nowadays support this.</li>
 </ul>
+
+<b>Improvements</b>
+<u>
+<li><a href="https://github.com/RealRaven2000/quickFilters/issues/145">[issue 145]</a>
+Filter "text" area is narrow and won't expand #145</li>
+</u>
 
 <strong>Support My Work</strong>
 
