--- a/release-notes.html
+++ b/release-notes.html
@@ -1,4 +1,4 @@
-<b>Version 3.3</b>
+<b>Version 3.3.1</b>
 
 FiltaQuilla is now compatible with Thunderbird 91. FiltaQuilla had to have some necessary changes for Thunderbird 91, for instance the filteraction "match" function has been replace with "matchAction" and changed parameters.
 
@@ -8,19 +8,17 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 
 <b>Bug Fixes</b>
 <ul>
-<li> <a href="https://github.com/RealRaven2000/FiltaQuilla/issues/130">[issue 130]</a> 
-Fixed: print automation is not working with Thunderbird Version 91.2.1</li>
-<li><a href="https://github.com/RealRaven2000/quickFilters/issues/142">[issue 142]</a> Fixed: Add sender to list shows no results in the List / Account dropdown.</li>
-<li><a href="https://github.com/RealRaven2000/quickFilters/issues/144">[issue 144]</a>,
-<a href="https://github.com/RealRaven2000/quickFilters/issues/131">[issue 131]</a> 
-Fixed: Save Message as File doesn't work with illegal filename characters in subject as "\", ":", "*", "|" or "?". These are now replaced with "-". Diacritics and special characters are replaced with phonetical equvialents. Case is now preserved, I assume that most file systems nowadays support this.</li>
+<li></li>
 </ul>
 
 <b>Improvements</b>
 <ul>
-<li><a href="https://github.com/RealRaven2000/quickFilters/issues/145">[issue 145]</a>
-Filter "text" area is narrow and won't expand #145</li>
+<li><a href="https://github.com/RealRaven2000/quickFilters/issues/125">[issue 125]</a> Add ability to archive messages from filters</li>
+<li><a href="https://github.com/RealRaven2000/quickFilters/issues/152">[issue 152]</a> Support printing via PrintingTools NG by Christopher Leidigh.</li>
 </ul>
+
+<b>Known Problems / WIP</b>
+<li><a href="https://github.com/RealRaven2000/quickFilters/issues/[issue 102]">[issue 102]</a> Variables @SUBJECT@ and others - decoding problems with non-latin characters.</li>
 
 <strong>Support My Work</strong>
 
