--- a/release-notes.html
+++ b/release-notes.html
@@ -1,4 +1,4 @@
-<b>Version 3.3.1</b>
+<b>Version 3.4</b>
 
 FiltaQuilla is now compatible with Thunderbird 91. FiltaQuilla had to have some necessary changes for Thunderbird 91, for instance the filteraction "match" function has been replace with "matchAction" and changed parameters.
 
@@ -15,6 +15,7 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 <ul>
 <li><a href="https://github.com/RealRaven2000/quickFilters/issues/125">[issue 125]</a> Add ability to archive messages from filters</li>
 <li><a href="https://github.com/RealRaven2000/quickFilters/issues/152">[issue 152]</a> Support printing via PrintingTools NG by Christopher Leidigh.</li>
+<li><a href="https://github.com/RealRaven2000/quickFilters/issues/153">[issue 153]</a> Implement new filter action "Forward with SmartTemplate". Planned to work from SmartTemplates 3.11 forward</li>
 </ul>
 
 <b>Known Problems / WIP</b>
