--- a/release-notes.html
+++ b/release-notes.html
@@ -13,12 +13,12 @@ If you would like to support FiltaQuilla with donation you can now <a href="http
 
 <b>Improvements</b>
 <ul>
-<li><a href="https://github.com/RealRaven2000/quickFilters/issues/125">[issue 125]</a> Add ability to archive messages from filters</li>
-<li><a href="https://github.com/RealRaven2000/quickFilters/issues/152">[issue 152]</a> Support printing via PrintingTools NG by Christopher Leidigh.</li>
-<li><a href="https://github.com/RealRaven2000/quickFilters/issues/153">[issue 1]</a> Implement new filter action "Forward with SmartTemplate" and "Reply with SmartTemplate". SmartTemplates adds a plethora of functionality, such as replacing  text or quote headers from the quoted email and also adding / removing recipients and cleaning subject lines.
+<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/126">[issue 126]</a> Add ability to archive messages from filters</li>
+<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/152">[issue 152]</a> Support printing via PrintingTools NG by Christopher Leidigh.</li>
+<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/153">[issue 153]</a> Implement new filter action "Forward with SmartTemplate" and "Reply with SmartTemplate". <a href="https://addons.thunderbird.net/thunderbird/addon/smarttemplate4/"> SmartTemplates</a> adds a plethora of functionality, such as replacing  text or quote headers from the quoted email and also adding / removing recipients and cleaning subject lines.
 Works from SmartTemplates version 3.11 forward.
 </li>
-<li><a href="https://github.com/RealRaven2000/quickFilters/issues/102">[issue 102]</a> Run Program: New option to transmit parameters as UTF-16 format in order to correctly submit non-latin characters such as cyrillic.</li>
+<li><a href="https://github.com/RealRaven2000/FiltaQuilla/issues/102">[issue 102]</a> Run Program: New option to transmit parameters as UTF-16 format in order to correctly submit non-latin characters such as cyrillic.</li>
 </ul>
 
 <strong>Support My Work</strong>
